# ChangeLog for dev-perl/NetAddr-IP
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/NetAddr-IP/ChangeLog,v 1.23 2010/11/22 16:43:57 tove Exp $

*NetAddr-IP-4.037 (22 Nov 2010)

  22 Nov 2010; Torsten Veller <tove@gentoo.org> +NetAddr-IP-4.037.ebuild:
  Version bump

*NetAddr-IP-4.035 (31 Oct 2010)

  31 Oct 2010; Torsten Veller <tove@gentoo.org> -NetAddr-IP-4.034.ebuild,
  +NetAddr-IP-4.035.ebuild:
  Version bump. Cleanup

*NetAddr-IP-4.034 (27 Oct 2010)

  27 Oct 2010; Torsten Veller <tove@gentoo.org> +NetAddr-IP-4.034.ebuild:
  Version bump

*NetAddr-IP-4.033 (30 Sep 2010)

  30 Sep 2010; Robin H. Johnson <robbat2@gentoo.org>
  +NetAddr-IP-4.033.ebuild:
  Version bump via perl-bump experimental tool.

*NetAddr-IP-4.032 (28 Sep 2010)

  28 Sep 2010; Torsten Veller <tove@gentoo.org> +NetAddr-IP-4.032.ebuild:
  Version bump

  03 Aug 2010; Jeroen Roovers <jer@gentoo.org> NetAddr-IP-4.028.ebuild:
  Stable for PPC (bug #328019).

  03 Aug 2010; Jeroen Roovers <jer@gentoo.org> NetAddr-IP-4.028.ebuild:
  Stable for HPPA (bug #328019).

  24 Jul 2010; Raúl Porcel <armin76@gentoo.org> NetAddr-IP-4.028.ebuild:
  alpha/ia64/sparc stable wrt #328019

*NetAddr-IP-4.030 (22 Jul 2010)

  22 Jul 2010; Torsten Veller <tove@gentoo.org> +NetAddr-IP-4.030.ebuild:
  Version bump

  19 Jul 2010; Samuli Suominen <ssuominen@gentoo.org>
  NetAddr-IP-4.028.ebuild:
  ppc64 stable wrt #328019

  18 Jul 2010; Markos Chandras <hwoarang@gentoo.org>
  NetAddr-IP-4.028.ebuild:
  Stable on amd64 wrt bug #328019

  17 Jul 2010; Christian Faulhammer <fauli@gentoo.org>
  NetAddr-IP-4.028.ebuild:
  stable x86, bug 328019

  06 Jul 2010; Samuli Suominen <ssuominen@gentoo.org>
  NetAddr-IP-4.028.ebuild:
  Keyword ~ppc64 wrt #313321

  11 Jun 2010; Torsten Veller <tove@gentoo.org> -NetAddr-IP-4.027.ebuild:
  Cleanup

*NetAddr-IP-4.028 (14 May 2010)

  14 May 2010; Torsten Veller <tove@gentoo.org> +NetAddr-IP-4.028.ebuild:
  Version bump
