@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/NetAddr-IP
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/NetAddr-IP/ChangeLog,v 1.23 2010/11/22 16:43:57 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/NetAddr-IP/ChangeLog,v 1.24 2010/12/29 12:01:25 tove Exp $
+
+  29 Dec 2010; Torsten Veller <tove@gentoo.org> -NetAddr-IP-4.030.ebuild,
+  -NetAddr-IP-4.032.ebuild, -NetAddr-IP-4.033.ebuild, -NetAddr-IP-4.035.ebuild:
+  Cleanup
 
 *NetAddr-IP-4.037 (22 Nov 2010)
 
